Write some stuff in background section

--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -4,7 +4,7 @@
   \label{abstract}
   \currentpdfbookmark{Abstract}{abstract}
   
-  \noindent This thesis proposes a novel approach for the implementation of a tracking system to
+  \noindent This thesis presents a novel approach for the implementation of a tracking system to
   facilitate program analysis, based on program transformations. The system is then applied to a
   specific problem in the field of probabilistic programming.
 
