--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -7,8 +7,9 @@
   \renewcommand{\arraystretch}{1.5}
   \begin{tabular}{lp{0.6\textwidth}}
     \(\Prob{\Theta \in A \given X = x}\) & Random variables and their realizations will usually be
-                                           denoted with upper and  lower case letters, respectively;
-                                           sets with uppercase letters.\\
+                                           denoted with upper and lower case letters, respectively
+                                           (with some exceptions for Greek variable names).  Sets
+                                           are written with uppercase letters.\\
     \(\Exp{X}\), \(\Var[X]{Y}\) & Expectation and variance; if necessary, the variable with respect
                                   to which the moment is taken is indicated. \\
     \(f(x)\), \(\phi_Z(x)\) & Density function are named using letters commonly used for functions,
