--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -1,4 +1,20 @@
 
+@article{10.1145/3276490,
+  title = {Julia: {{Dynamism}} and Performance Reconciled by Design},
+  author = {Bezanson, Jeff and Chen, Jiahao and Chung, Benjamin and Karpinski, Stefan and Shah, Viral B. and Vitek, Jan and Zoubritzky, Lionel},
+  date = {2018-10},
+  journaltitle = {Proc. ACM Program. Lang.},
+  volume = {2},
+  publisher = {{Association for Computing Machinery}},
+  address = {New York, NY, USA},
+  doi = {10.1145/3276490},
+  url = {https://doi.org/10.1145/3276490},
+  articleno = {120},
+  issue = {OOPSLA},
+  issue_date = {November 2018},
+  pagetotal = {23}
+}
+
 @article{andrieu2010particlea,
   title = {Particle {{Markov}} Chain {{Monte Carlo}} Methods},
   shorttitle = {Particle {{Markov}} Chain {{Monte Carlo}} Methods},
@@ -571,14 +587,22 @@
   primaryClass = {stat}
 }
 
-@article{narayanansymbolic,
+@article{narayanan2020symbolic,
   title = {Symbolic Disintegration with a Variety of Base Measures},
   author = {Narayanan, Praveen and Shan, Chung-chieh},
-  volume = {1},
-  pages = {52},
-  url = {http://homes.soic.indiana.edu/ccshan/rational/disint2arg.pdf},
-  langid = {english},
-  number = {1}
+  date = {2020-05},
+  journaltitle = {ACM Transactions on Programming Languages and Systems},
+  shortjournal = {ACM Trans. Program. Lang. Syst.},
+  volume = {42},
+  publisher = {{Association for Computing Machinery}},
+  address = {New York, NY, USA},
+  issn = {0164-0925},
+  doi = {10.1145/3374208},
+  url = {https://doi.org/10.1145/3374208},
+  articleno = {9},
+  issue_date = {May 2020},
+  number = {2},
+  pagetotal = {60}
 }
 
 @article{neubig2017dynet,
@@ -890,6 +914,21 @@
   booktitle = {Machine Learning Systems Workshop at {{NIPS}}},
   author = {Yuret, Deniz},
   date = {2016}
+}
+
+@article{zappanardelli2018julia,
+  title = {Julia Subtyping: A Rational Reconstruction},
+  shorttitle = {Julia Subtyping},
+  author = {Zappa Nardelli, Francesco and Belyakova, Julia and Pelenitsyn, Artem and Chung, Benjamin and Bezanson, Jeff and Vitek, Jan},
+  date = {2018-10-24},
+  journaltitle = {Proceedings of the ACM on Programming Languages},
+  shortjournal = {Proc. ACM Program. Lang.},
+  volume = {2},
+  pages = {113:1--113:27},
+  doi = {10.1145/3276483},
+  url = {https://doi.org/10.1145/3276483},
+  urldate = {2020-07-07},
+  issue = {OOPSLA}
 }
 
 
