--- a/thesis/typographic_setup.sty
+++ b/thesis/typographic_setup.sty
@@ -6,9 +6,9 @@
 %
 
 \RequirePackage{libertine} % libertine with biolinum
-\RequirePackage[scaled=0.95,varqu]{inconsolata} % monospace font
+\RequirePackage[scaled=0.95, varqu]{inconsolata} % monospace font
 
-\RequirePackage[libertine,varg]{newtxmath} % matching math fonts
+\RequirePackage[libertine, slantedGreek, smallerops]{newtxmath} % matching math fonts
 \def\libertine@figurestyle{OsF} % restore old style figures
 \renewcommand*{\rmdefault}{LinuxLibertineT-OsF}
 
