Improve notation/math etc.

--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -5,7 +5,7 @@
   \currentpdfbookmark{Abstract}{abstract}
   
   \noindent This thesis presents a novel approach for the implementation of a tracking system to
-  facilitate program analysis, based on program transformations. The system is then applied to a
+  facilitate program analysis, based on program transformations. The approach is then applied to a
   specific problem in the field of probabilistic programming.
 
   The main contribution is a general system for the extraction of rich computation graphs in the
