--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,6 +1,8 @@
 \chapter{Introduction}
 \label{cha:introduction}
 
+The idea of this work has already been described in \cite{gabler2019graph}.
+
 \section{Problem Description}
 \label{sec:problem-description}
 
