--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -27,19 +27,19 @@ observations.  When observations come in pairs of independent and dependent vari
 conditional model of one given the other solves a regression or classification problem.
 
 Within a Baysian statistical framework, we assume that the family of processes used is specified by
-a joint distribution of random variables related through conditional distributions with densities,
-which describe how the observables would be generated: some \emph{latent variables} are generated
-from \emph{prior distributions}, and the observed \emph{data} are generated conditionally on the
-latent variables.  The goal is to learn the \emph{posterior distribution} of the parameters given
-the observations, which is the inverse of how the problem is specified.
+random variables related through conditional distributions with densities, which describe how the
+observables would be generated: some \emph{latent variables} are generated from \emph{prior
+  distributions}, and the observed \emph{data} are generated conditionally on the latent variables.
+The goal is to learn the \emph{posterior distribution} of the parameters given the observations,
+which is the inverse of how the problem is specified.
 
 As an example, consider image classification: if we assume that certain percentages of an image data
-set picture cats and dogs, recpectively, the distribution of these labels forms the prior.  Given
-the information which animal is depicted on it, an image can then be generated as a matrix of pixels
-based on a distribution of images conditioned on labels.  The posterior distribution is then the
-``inverse'' distribution of the label given an image.  When we have this information, we can, for
-example, build a Baysian classifier, by returning for a newly observed image that label which has
-the higher probability under the posterior.
+set picture cats and dogs, respectively, the distribution of these labels forms the prior.  Given
+the information which kind of animal is depicted on it, an image can then be generated as a matrix
+of pixels based on a distribution of images conditioned on labels.  The posterior distribution is
+then the ``inverse'' distribution of the label given an image.  When we have this information, we
+can, for example, build a Baysian classifier, by returning for a newly observed image that label
+which has the higher probability under the posterior.
 
 This kind of learning is called Bayesian inference since, in the form of densities, the form of the
 model can be expressed using Bayes' theorem:
@@ -47,12 +47,12 @@ model can be expressed using Bayes' theorem:
   \label{eq:bayes}
   \prob{\theta \given x} = \frac{\prob{x \given \theta}\; \prob{\theta}}{\prob{x}},
 \end{equation}
-where \(x\) is the vector of observed data, and \(\theta\) are the parameters.\footnote{Note the
-  abuse of notation with \(\prob{}\) and the integral; see page~\pageref{cha:notation} on notation.}
-(In practice, not all of the latent variables have to parameters we are actually interested in;
-these can be integrated out).
+where \(x\) are the observed data, and \(\theta\) are the parameters.\footnote{Note the abuse of
+  notation regarding the name of \(\prob{\cdot}\); see page~\pageref{cha:notation} on notation.}  (In
+practice, not all of the latent variables have to parameters we are actually interested in; these
+can be integrated out).
 
-Going beyond simple applications like the classifier mentioned above, using the posterior gets
+Going beyond simple applications like the classifier mentioned above, handling the posterior gets
 difficult, though.  Simply evaluating the posterior density
 \(\theta \mapsto \prob{\theta \given x}\) at single points is not enough for usages such as
 parameter estimation with continuous parameters, or even simple probability evaluation; and even for
@@ -63,44 +63,69 @@ sort of expectation over the posterior density, which is an integral:
   \label{eq:posterior-expectation}
   \Exp{f(\Theta) \given X = x} = \int f(\theta) \prob{\theta \given x} \dif \theta,
 \end{equation}
-with the base measure depending on the type of \(\Theta\).  When the distributions involved form a
-sufficiently \enquote{nice} combination, e.g., when they form a conjugate pair \todo{ref}, the
-integrals can be calculated analytically since the posterior density has a closed form for a certain
-known distribution, or at least is a known integral.  In general, however, this is not possible, and
-approximation have to be made, for which different approaches are available: for example,
-expectation maximization for models with latent variables\todo{ref} or message passing and
-variational methods for general graphical models\todo{ref}.
+with the base measure depending on the type of \(\Theta\), or equivalently the fact that it is hard
+to find the normalizing marginal
+\begin{equation}
+  \label{eq:normalizing}
+  \prob{x} = \int \prob{x, \tilde{\theta}} \dif \tilde{\theta}.
+\end{equation}
+When the distributions involved form a sufficiently \enquote{nice} combination, e.g., a conjugate
+pair \todo{ref}, the integrals can be calculated analytically since the posterior density has a
+closed form for a certain known distribution, or at least is a known integral.  In general, however,
+this is not possible, and approximations have to be made, for which different approaches are
+available: for example, expectation maximization for models with latent variables\todo{ref} or
+message passing and variational methods for general graphical models\todo{ref}.
 
 The applications described in this thesis fall into another framework for approximating posterior
-information: Monte Carlo methods, which derive from a specified density a procedure that provides a
-sample of random variables for which a law of large numbers (LLN) holds:
+information: Monte Carlo methods, which derive from a specified density a consistent estimator for
+the expected value:
 \begin{equation}
-  \label{eq:lln}
-  \frac{1}{n} \sum_{i=1}^{n} f(\Theta_{i}) \to \Exp{f(\Theta) \given X = x}, \quad \text{as} \quad n
+  \label{eq:mc-methods}
+  \kth[n]{I}(f) \to \Exp{f(\Theta) \given X = x}, \quad \text{as} \quad n
   \to \infty
 \end{equation}
-in some appropriate stochastic convergence (usually convergence in probability is enough).  When
-\(\Theta_{i} \sim \prob{\cdot \given x}\) can be sampled exactly, and the \(\Theta_{i}\) are thus
-\iid, the LLN holds trivially; such samplers exist, but might also be difficult to derive or not
+in some appropriate stochastic convergence (usually convergence in probability is enough).  Most of
+these methods are defined in a form that samples individual random variables, for which a law of
+large numbers (LLN) holds:
+\begin{equation}
+  \label{eq:mc-lln}
+  \kth[n]{I}(f) = \frac{1}{n} \sum_{i=1}^{n} f(\kth[i]{\Theta}) \to \Exp{f(\Theta) \given X = x}
+\end{equation}
+When we can sample \(\Theta_{i} \sim \prob{\cdot \given x}\) exactly, the \(\Theta_{i}\) are \iid{}
+and the LLN holds trivially; such samplers exist, but might also be difficult to derive or not
 possess good enough convergence properties.  Another large class of samplers is formed by
 \emph{Markov Chain Monte Carlo} (MCMC) methods, which, instead of sampling exactly from the density,
-provide a Markov chain whose stationary distribution is the target density.  The advantage of MCMC
-methods is that they mostly treat the density as a black box, without requiring any more formal
-manipulations on it.
+define \(\kth[i]{\Theta}\) via a Markov chain whose stationary distribution is the target density.
+By choosing the transition the right way, the resolving Markov chain is ergodic with the target
+density as the unique stationary distribution (this is the inverse to the problem of finding a
+stationary distribution).  The advantage of MCMC methods is that they mostly treat the density as a
+black box, without requiring any more formal manipulations on its structure.
 
-The general scheme of MCMC methods consists of the definition of a transition kernel by means of two
-helper fuctions: a proposal distribution with density \(q\), and an acceptance rate \(\alpha\), both
-depending on the old value in the chain:
+A frequent scheme for MCMC methods is the Metropolis-Hastings algorithm, consisting of the
+definition of a transition kernel by means of two helper fuctions: a proposal distribution with
+density \(q\), and an acceptance rate \(\alpha\), both depending on the old value in the
+chain:\todo{make an algorithm}
 \begin{enumerate}
-\item Start from an arbitrary \(\Theta_{1} = \theta_{1}\).
+\item Start from an arbitrary \(\kth[1]{\Theta}\).
 \item For each \(i \ge 1\):
   \begin{enumerate}
-  \item Propose \(\hat{\Theta}_{i} \sim q(\cdot \given \Theta_{i-1})\).
-  \item With probability \(\alpha(\hat{\Theta}_{i}, \Theta_{i-1})\), set \(\Theta_{i} =
-    \hat{\Theta}_{i}\); else, keep \(\Theta_{i} = \Theta_{i-1}\).
+  \item Propose \(\kth[i]{\hat{\Theta}} \sim q(\cdot \given \kth[i-1]{\Theta})\).
+  \item With probability \(\alpha(\kth[i]{\hat{\Theta}}, \kth[i-1]{\Theta})\), set
+    \(\kth[i]{\Theta} = \kth[i]{\hat{\Theta}}\); else, keep \(\kth[i]{\Theta} = \kth[i-1]{\Theta}\).
   \end{enumerate}
 \end{enumerate}
 
+There exist many such schemes with different properties and requirements: the classical Metropolis
+algorithm with Gaussian proposals; Reversible Jump MCMC; gradient-informed methods like Metropolis
+Adjusted Langevin or Hamiltonian Monte Carlo (HMC); and Gibbs sampling.
+
+% when we assume that \(\Theta = [\Theta_1, \ldots, \Theta_N]\),
+
+The within-Gibbs sampler is a generalization of the classical Gibbs sampling algorithm: the
+conditional densities \(\theta_{i} \mapsto p(\theta_{i} \given \theta_{-i}, x)\) can directly be
+used as proposals for a within-Gibbs sampler, leading to an acceptance probability of
+\(\alpha \equiv 1\).  This sampler has the advantage that it is in many cases rather easy to derive,
+even manually, from a given model specification.
 
 \subsection{Probabilistic Programming}
 \label{sec:prob-prog}
