--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -3,25 +3,40 @@
 \addcontentsline{toc}{chapter}{Notation}
 % \currentpdfbookmark{Notation}{notation}
 
-\begin{center}
-  \renewcommand{\arraystretch}{1.5}
-  \begin{tabular}{lp{0.6\textwidth}}
-    \(\Prob{\Theta \in A \given X = x}\) & Random variables and their realizations will usually be
-                                           denoted with upper and lower case letters, respectively
-                                           (with some exceptions for Greek variable names).  Sets
-                                           are written with uppercase letters.\\
-    \(\Exp{X}\), \(\Var[X]{Y}\) & Expectation and variance; if necessary, the variable with respect
-                                  to which the moment is taken is indicated. \\
-    \(f(x)\), \(\phi_Z(x)\) & Density function are named using letters commonly used for functions,
-                              with an optional subscript indicating the random variable they belong
-                              to. \\
-    \(\prob{x, y \given z}\) & The usual abuse of notation with the letter \enquote{p} standing for
-                               any density indicated by the names of the variables given to it is
-                               used as well (in this case, \(f_{X,Y|Z}\) is implied). \\
-    \(\int \prob{x} \dif x = 1\) & Integrals over the whole domain of a density are written as
-                                   indefinite integrals, where the usage is clear.
-  \end{tabular}
-\end{center}
+\begin{description}[style=nextline, leftmargin=4cm]
+\item[\(\Prob{\Theta \in A \given X = x}\)] Random variables and their realizations will usually be
+  denoted with upper and lower case letters, respectively
+  (with some exceptions for Greek variable names).  Sets
+  are written with uppercase letters.
+\item[{\(\Exp{X}, \Var[X]{f(X, Y)}\)}] Expectation and variance; if necessary, the variable with
+  respect to which the moment is taken is indicated.
+\item[\(\phi(x), f_{Z}(x)\)] Density functions are named using letters commonly used for functions,
+  with an optional subscript indicating the random variable they belong to.  Densities always come
+  with implied base measures depending on the type of the random variable.
+\item[\(\prob{x, y \given z}\)] The usual abuse of notation with the letter \enquote{p} standing for
+  any density indicated by the names of the variables given to it is used when no confusion arises
+  (in this case, \(f_{X,Y|Z}\) is implied).
+\item[{\(y \mapsto \prob{x \given y, z}\)}] Anonymous functions are distinguised from function
+  evaluation; this is crucial to differentiate between probability densities and likelihoods, for
+  example.
+\item[\(\int \prob{x} \dif x = 1\)] Integrals over the whole domain of a density are written as
+  indefinite integrals, where the usage is clear.
+\item[{\([x, y, z] = \smash[b]{\begin{bsmallmatrix}x\\y\\z\end{bsmallmatrix}}\)}] For consistency
+  with Julia code, vectors (arrays of rank \(1\)) are written in brackets.  Thereby, the form
+  written in a row denotes a column vector; actual row vectors are written as transposed column
+  vectors.
+\item[{\(\kth{\Theta} = [\kth{\Theta}_1, \ldots, \kth{\Theta}_N]\)}] Uppercase indices in
+  parentheses are used for series or sequences of variables; lower indices for components of
+  multivariate variables.
+\item[{\(z_{-i} = [z_{1}, \ldots, z_{i-1}, z_{i+1}, \ldots, z_{N}]\)}] Negative indices denote all
+  components of a variable without the negated one.
+\item[{\(\broadcast{f}(x, 1) = [f(x_{1}, 1), \ldots, f(x_{N}, 1)]\)}] Functions with a period
+  indicate vectorized application, as in Julia
+  code\footnote{See~\protect\url{https://docs.julialang.org/en/v1/manual/functions/\#man-vectorized-1}}:
+  the function is applied over all elements of the input arrays individually, whereby arrays of
+  lower rank or scalars are \enquote{broadcasted} along dimensions as necessary.
+\item
+\end{description}
 
 %%% Local Variables: 
 %%% TeX-master: "main"
