--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -173,6 +173,19 @@
   langid = {english}
 }
 
+@book{congdon2006bayesian,
+  title = {Bayesian Statistical Modelling},
+  author = {Congdon, P.},
+  date = {2006},
+  edition = {2nd ed},
+  publisher = {{John Wiley \& Sons}},
+  location = {{Chichester, England ; Hoboken, NJ}},
+  file = {/home/philipp/Zotero/storage/ZZQKXVD6/Congdon_2006_Bayesian statistical modelling.pdf},
+  isbn = {978-0-470-01875-0},
+  pagetotal = {573},
+  series = {Wiley Series in Probability and Statistics}
+}
+
 @article{dahlin2015getting,
   title = {Getting {{Started}} with {{Particle Metropolis}}-{{Hastings}} for {{Inference}} in {{Nonlinear Dynamical Models}}},
   author = {Dahlin, Johan and Schön, Thomas B.},
@@ -772,6 +785,15 @@
   abstract = {JAGS is a program for Bayesian Graphical modelling which aims for compatibility with classic BUGS. The program could eventually be developed as an R package. This article explains the motivations for this program, briefly describes the architecture and then discusses some ideas for a vectorized form of the BUGS language.},
   file = {/home/philipp/Zotero/storage/PSRFLNS6/Plummer - 2003 - JAGS A Program for Analysis of Bayesian Graphical.pdf},
   langid = {english}
+}
+
+@unpublished{plummer2017jags,
+  title = {{{JAGS Version}} 4.3.0 User Manual},
+  author = {Plummer, Martyn},
+  date = {2017},
+  url = {https://sourceforge.net/projects/mcmc-jags/files/Manuals/4.x/jags_user_manual.pdf/download},
+  urldate = {2020-07-17},
+  file = {/home/philipp/Zotero/storage/XIKA757A/jags_user_manual.pdf}
 }
 
 @online{radul2013introduction,
