--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -25,8 +25,8 @@
   with Julia code, vectors (arrays of rank \(1\)) are written in brackets.  Thereby, the form
   written in a row denotes a column vector; actual row vectors are written as transposed column
   vectors.
-\item[{\(\kth{\Theta} = [\kth{\Theta}_1, \ldots, \kth{\Theta}_N]\)}] Uppercase indices in
-  parentheses are used for series or sequences of variables; lower indices for components of
+\item[{\(\kth{\Theta} = [\kth{\Theta}_1, \ldots, \kth{\Theta}_N]\)}] Superscript indices in
+  parentheses are used for series or sequences of variables, and subscript indices for components of
   multivariate variables.
 \item[{\(z_{-i} = [z_{1}, \ldots, z_{i-1}, z_{i+1}, \ldots, z_{N}]\)}] Negative indices denote all
   components of a variable without the negated one.
